--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,65 +5,22 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Book Re-Life: Inventory & POS</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        darkMode: 'class',
-        theme: {
-          extend: {
-            colors: {
-              border: "hsl(214.3 31.8% 91.4%)",
-              input: "hsl(214.3 31.8% 91.4%)",
-              ring: "hsl(215 20.2% 65.1%)",
-              background: "hsl(0 0% 100%)",
-              foreground: "hsl(222.2 84% 4.9%)",
-              primary: {
-                DEFAULT: "hsl(222.2 47.4% 11.2%)",
-                foreground: "hsl(210 40% 98%)",
-              },
-              secondary: {
-                DEFAULT: "hsl(210 40% 96.1%)",
-                foreground: "hsl(222.2 47.4% 11.2%)",
-              },
-              destructive: {
-                DEFAULT: "hsl(0 84.2% 60.2%)",
-                foreground: "hsl(210 40% 98%)",
-              },
-              muted: {
-                DEFAULT: "hsl(210 40% 96.1%)",
-                foreground: "hsl(215.4 16.3% 46.9%)",
-              },
-              accent: {
-                DEFAULT: "hsl(210 40% 96.1%)",
-                foreground: "hsl(222.2 47.4% 11.2%)",
-              },
-              popover: {
-                DEFAULT: "hsl(0 0% 100%)",
-                foreground: "hsl(222.2 84% 4.9%)",
-              },
-              card: {
-                DEFAULT: "hsl(0 0% 100%)",
-                foreground: "hsl(222.2 84% 4.9%)",
-              },
-            },
-          }
-        }
-      }
-    </script>
   <script type="importmap">
 {
   "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "vite": "https://aistudiocdn.com/vite@^7.2.2",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0",
-    "recharts": "https://aistudiocdn.com/recharts@^3.4.1"
+    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "recharts": "https://aistudiocdn.com/recharts@^3.4.1",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0"
   }
 }
 </script>
 </head>
   <body class="bg-background text-foreground">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
