--- a/index.html
+++ b/index.html
@@ -60,12 +60,7 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0",
     "recharts": "https://aistudiocdn.com/recharts@^3.4.1",
     "jwt-decode": "https://aistudiocdn.com/jwt-decode@^4.0.0",
-    "axios": "https://aistudiocdn.com/axios@^1.13.2",
-    "url": "https://aistudiocdn.com/url@^0.11.4",
-    "path": "https://aistudiocdn.com/path@^0.12.7",
-    "process": "https://aistudiocdn.com/process@^0.11.10",
-    "fastify": "https://aistudiocdn.com/fastify@^5.6.2",
-    "@fastify/static": "https://aistudiocdn.com/@fastify/static@^8.3.0"
+    "axios": "https://aistudiocdn.com/axios@^1.13.2"
   }
 }
 </script>
