--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0",
     "recharts": "https://aistudiocdn.com/recharts@^3.4.1",
     "jwt-decode": "https://aistudiocdn.com/jwt-decode@^4.0.0",
-    "axios": "https://aistudiocdn.com/axios@^1.13.2"
+    "axios": "https://aistudiocdn.com/axios@^1.13.2",
+    "process": "https://aistudiocdn.com/process@^0.11.10",
+    "bcrypt": "https://aistudiocdn.com/bcrypt@^6.0.0",
+    "@prisma/client": "https://aistudiocdn.com/@prisma/client@^6.19.0"
   }
 }
 </script>
