feat(backend): Implement Fastify server and core APIs
This commit introduces a Fastify-based backend server with essential features for edit Book Re-Life. It includes:

-   **Fastify Setup**: Integrates Fastify with plugins for CORS, Helmet, and JWT authentication.
-   **Prisma Client**: Establishes connection and defines core data models using Prisma.
-   **Authentication**: Implements user login and authentication middleware.
-   **API Endpoints**: Sets up basic routes for user and book management.
-   **Environment Variables**: Integrates dotenv for managing server configuration.
-   **Schema Validation**: Leverages Zod for robust request payload validation.

The frontend's `api.ts` is updated to use the correct `import.meta.env` syntax for the API base URL and introduces a more robust error handling function. `index.html` now includes the necessary dependencies for the backend server.

This lays the foundation for all backend functionalities, enabling secure and efficient data management for the application.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,13 @@
     "axios": "https://aistudiocdn.com/axios@^1.13.2",
     "process": "https://aistudiocdn.com/process@^0.11.10",
     "bcrypt": "https://aistudiocdn.com/bcrypt@^6.0.0",
-    "@prisma/client": "https://aistudiocdn.com/@prisma/client@^6.19.0"
+    "@prisma/client": "https://aistudiocdn.com/@prisma/client@^6.19.0",
+    "fastify": "https://aistudiocdn.com/fastify@^5.6.2",
+    "zod": "https://aistudiocdn.com/zod@^4.1.12",
+    "dotenv": "https://aistudiocdn.com/dotenv@^17.2.3",
+    "@fastify/cors": "https://aistudiocdn.com/@fastify/cors@^11.1.0",
+    "@fastify/helmet": "https://aistudiocdn.com/@fastify/helmet@^13.0.2",
+    "@fastify/jwt": "https://aistudiocdn.com/@fastify/jwt@^10.0.0"
   }
 }
 </script>
