--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Book Re-Life: Inventory & POS</title>
   </head>
-  <body class="bg-background text-foreground">
+  <body class="bg-secondary/50 text-foreground">
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
